# tmpl

./: LICENSE  meson.build  meson_options.txt
include/: meson.build
include/tmpl/: tmpl.hpp  utils.hpp
src/: meson.build  tmpl.cpp  utils.cpp  utils.hpp  version.hpp.in
tests/: basics.cpp  clear.cpp  filters.cpp  main.cpp  meson.build  version.cpp
